[tool.poetry]
name = "google-analytics-client"
version = "0.1.0"
description = "Google Analytics client for Python3"
authors = ["Mikhail Vasilchenko <rekoy88@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^2.13.0"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
